--- a/src/resources/fxml/interactive-dbml-builder.fxml
+++ b/src/resources/fxml/interactive-dbml-builder.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane prefHeight="409.0" prefWidth="609.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.InteractiveController">
+<BorderPane prefHeight="409.0" prefWidth="609.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" >
    <top>
       <HBox prefHeight="43.0" prefWidth="609.0" BorderPane.alignment="CENTER">
          <children>
