--- a/src/resources/fxml/interactive-dbml-builder.fxml
+++ b/src/resources/fxml/interactive-dbml-builder.fxml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.canvas.*?>
+<?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-
 <BorderPane prefHeight="409.0" prefWidth="609.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.InteractiveController">
    <top>
       <HBox prefHeight="43.0" prefWidth="609.0" BorderPane.alignment="CENTER">
